# ITKTrimmedPointSetRegistration

./: CMakeLists.txt  README.rst  itk-module.cmake  pyproject.toml  setup.py
examples/: CMakeLists.txt  TrimmedPointSetRegistrationExample.cxx  display.point.sets.R  display.test.R
include/: itkTrimmedEuclideanDistancePointSetToPointSetMetricv4.h  itkTrimmedEuclideanDistancePointSetToPointSetMetricv4.hxx  itkTrimmedPointSetToPointSetMetricv4.h  itkTrimmedPointSetToPointSetMetricv4.hxx  itkWeightedEuclideanDistancePointSetToPointSetMetricv4.h  itkWeightedEuclideanDistancePointSetToPointSetMetricv4.hxx
src/: CMakeLists.txt
test/: CMakeLists.txt  itkTrimmedEuclideanDistancePointSetRegistrationTest.cxx  itkTrimmedPointSetRegistrationTest.cxx
wrapping/: CMakeLists.txt  itkTrimmedEuclideanDistancePointSetToPointSetMetricv4.wrap
